--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -4,8 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
 :root {
    --background: #ffffff;
    --foreground: #171717;
@@ -19,7 +17,7 @@
 
 @media (prefers-color-scheme: dark) {
    :root {
-      --background: #1a1a1a ;
+      --background: #13171d;
       --foreground: #ededed;
    }
 }
@@ -32,36 +30,4 @@ body {
 .acrilico {
    background: rgba(255, 255, 255, 0.267);
    backdrop-filter: blur(1px);
-}
-.inputText {
-   width: 100%;
-   padding: 12px 16px;
-   font-size: 1rem;
-   border: 2px solid #ccc;
-   border-radius: 8px;
-   background-color: #fff;
-   color: #333;
-   transition: all 0.3s ease;
-}
-
-.inputText:focus {
-   outline: none;
-   border-color: #4CAF50;
-   box-shadow: 0 0 8px rgba(76, 175, 80, 0.4);
-}
-
-.inputText::placeholder {
-   color: #aaa;
-   font-style: italic;
-}
-
-.inputText:disabled {
-   background-color: #f0f0f0;
-   border-color: #ddd;
-   cursor: not-allowed;
-}
-
-.inputText.error {
-   border-color: #f44336;
-   box-shadow: 0 0 8px rgba(244, 67, 54, 0.4);
 }
