--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -12,7 +12,7 @@
 @theme inline {
    --color-background: var(--background);
    --color-foreground: var(--foreground);
-   --font-poppins: var(--font-poppins);
+   --font-karla: var(--font-karla);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -25,7 +25,7 @@
 body {
    background: var(--background);
    color: var(--foreground);
-   font-family: "Poppins", Arial, sans-serif;
+   font-family: var(--font-karla), Arial, sans-serif;
 }
 .acrilico {
    background: rgba(255, 255, 255, 0.267);
