--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -16,17 +16,16 @@
    --input-bg: #fff;
 }
 
+.dark {
+   --background: #19202d;
+   --foreground: #f0f0f0;
+   --input-bg: #1e2939;
+}
+
 @theme inline {
    --color-background: var(--background);
    --color-foreground: var(--foreground);
    --font-karla: var(--font-karla);
-}
-
-@media (prefers-color-scheme: dark) {
-   :root {
-      --background: #19202d;
-      --foreground: #f0f0f0;
-   }
 }
 
 body {
@@ -34,10 +33,16 @@ body {
    color: var(--foreground);
    font-family: var(--font-karla), Arial, sans-serif;
 }
+
 .acrilico {
    background: rgba(255, 255, 255, 0.267);
    backdrop-filter: blur(1px);
 }
+
+.dark .acrilico {
+   background: rgba(0, 0, 0, 0.267);
+}
+
 @layer utilities {
    .menu-dropdown-item {
       position: relative;
@@ -80,16 +85,15 @@ body {
       font-weight: var(--font-weight-medium);
    }
 }
+
 input:-webkit-autofill {
    box-shadow: 0 0 0 1000px var(--input-bg) inset !important;
 }
 
-@media (prefers-color-scheme: dark) {
-   input:-webkit-autofill {
-      box-shadow: 0 0 0 1000px #1e2939 inset !important;
-      -webkit-text-fill-color: #fff !important;
-   }
+.dark input:-webkit-autofill {
+   -webkit-text-fill-color: #fff !important;
 }
+
 .custom-scrollbar::-webkit-scrollbar {
    width: 6px;
 }
@@ -114,6 +118,7 @@ input:-webkit-autofill {
       print-color-adjust: exact;
    }
 }
+
 @media print {
    body * {
       visibility: hidden !important;
